--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,7 @@
 }
 
 body {
-  background-image:url('/background.jpg');
+  /* background-image:url('/background.jpg'); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
